--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 
     .review-card:hover, .review-card:focus {
         transform: scale(1.02);
-        box-shadow: 0px 0px 15px rgba(255,255,255,0.2); /* Increased shadow on hover */
+        box-shadow: 0px 0px 15px rgba(255,255,255,0.2);
     }
 
     .submit-button:hover, .submit-button:focus {
