--- a/src/componenets/Reviews/reviews.css
+++ b/src/componenets/Reviews/reviews.css
@@ -45,7 +45,6 @@
     margin-bottom: 10px;
     color: #cadff4;
     font-size: 1.1em;
-    
 }
 .special{
     align-items: center;
@@ -59,8 +58,12 @@ textarea {
     border-radius: 5px;
     background-color: #1d1c1c;
     color: #b6dcff;
-    width: 100%;
-    font-size: 1em;
+    
+    font-size: 1rem;
+    height: 2.8rem;
+
+    width: 20rem;
+    display: block;
 }
 
 textarea{
