--- a/src/componenets/footer/footer.css
+++ b/src/componenets/footer/footer.css
@@ -32,7 +32,7 @@
     padding: 0;
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin: 20px 0;
     gap: 0.3rem;
 }
 
@@ -44,7 +44,8 @@
 .footer .social-icons li a {
     color: #ffffff;
     transition: 0.3s ease;
-    font-size: 2rem;
+    font-size: 1.2rem;
+    text-align: center;
 }
 
 
@@ -67,7 +68,7 @@
     border: none;
     padding: 10px 20px;
     background-color: #1abc9c;
-    color: #ffffff;
+    color: #000000;
     cursor: pointer;
     border-radius: 5px;
     transition: 0.3s ease;
