--- a/src/App.css
+++ b/src/App.css
@@ -172,6 +172,9 @@
     .review-section {
         width: 100% !important;
     }
+    .review-card{
+        font-size: 16px;
+    }
 
 .card:hover::before,
 .card:hover::after,
@@ -200,6 +203,7 @@
 
     #mainbody #text-body{
         padding: 1rem !important;
+        font-size: 17px !important;
     }
     #mainbody {
         margin: 0 auto !important
@@ -238,7 +242,7 @@
 header{
         width: 100vw !important;
         justify-content: space-between !important;
-        padding: 0 0.3rem !important;
+        padding: 0 1.1rem 0 0.2rem !important;
         gap: 1.5rem !important;
         height: 3rem !important;
         left: 0 !important;
@@ -256,10 +260,13 @@ textarea{
 }
 @media screen and (max-width: 25rem){
     #mainbody #text-body h1{
-        font-size: 7.8vw;
+        font-size: 7.5vw;
     }
     #mainbody #text-body h2{
         font-size: 4vw;
+    }
+    #mainbody #text-body{
+        font-size: 3.3vw !important;
     }
     .card .feature-description{
         font-size: 3vw !important;
