--- a/src/App.css
+++ b/src/App.css
@@ -260,7 +260,7 @@ textarea{
 }
 @media screen and (max-width: 25rem){
     #mainbody #text-body h1{
-        font-size: 7.5rem !important;
+        font-size: 7vw !important;
     }
     #mainbody #text-body h2{
         font-size: 4vw !important;
